// Vitest Snapshot v1

exports[`DropZone > should render correctly 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-qn1o70-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root e17iqvr40 css-1juq47w-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
      variant="label"
    >
      Label
    </label>
    <label
      class="e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter e5krntv0 css-4y784b-getStyledComponent-StyledTypography-StyledInfoMessage e1tnpalo0"
      id="dropzone-test-description"
      variant="body"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer css-w7n486-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title="Drag and drop or Select files"
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-1gwzdkt-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon css-e01vc1-StyledDropAreaIcon e1r4xwg22 css-xq48n2"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--colors-acce1)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvDropZone-dragText e1r4xwg23 css-12v085h-getStyledComponent-StyledDragText e1tnpalo0"
          variant="body"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-vd5yui-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropZone > should render correctly when disabled 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-qn1o70-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root e17iqvr40 css-1jlu4ud-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
      variant="label"
    >
      Label
    </label>
    <label
      class="e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter e5krntv0 css-1ypp4a9-getStyledComponent-StyledTypography-StyledInfoMessage e1tnpalo0"
      id="dropzone-test-description"
      variant="body"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer HvDropZone-dropZoneContainerDisabled css-193xdyp-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      disabled=""
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title=""
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-1gwzdkt-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon css-e01vc1-StyledDropAreaIcon e1r4xwg22 css-xq48n2"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--colors-atmo5)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvDropZone-dragText e1r4xwg23 css-12v085h-getStyledComponent-StyledDragText e1tnpalo0"
          variant="body"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-vd5yui-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
